force-app/src/objects/ffct__OAuthSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ffct__ClientId__c</fullName>
        <label>ClientId</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffct__ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffct__RedirectURI__c</fullName>
        <label>RedirectURI</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ffct__Tools_Version_For_Push_Provision__c</fullName>
        <description>DEPRECATED</description>
        <inlineHelpText>Enter the latest available version of the Consultant Tools</inlineHelpText>
        <label>Tools Version For Push Provision Feature</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Consultant Tools OAuth Setting</label>
</CustomObject>